fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,19 +7,19 @@
        overflow: hidden;
        background-color: rgb(4 4 4 / 98%);
     }
-    .container::-webkit-scrollbar-track{
+    .overflow-y-auto::-webkit-scrollbar-track{
         -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
         border-radius: 10px;
         background-color: #f5f5f500;
     }
 
-    .container::-webkit-scrollbar{
+    .overflow-y-auto::-webkit-scrollbar{
         width: 8px;
         background-color: rgba(34, 45, 64, 0);
         cursor: pointer;
     }
 
-    .container::-webkit-scrollbar-thumb{
+    .overflow-y-auto::-webkit-scrollbar-thumb{
         border-radius: 10px;
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
         background-color: rgb(39, 50, 76);
